--- a/exp/Snakefile
+++ b/exp/Snakefile
@@ -105,7 +105,7 @@ rule run_PROBer_icSHAPE:
 	params:
 		"{path}/icSHAPE_{{condition}}_PROBer".format(path = exp_path)
 	output:
-		expand("{path}/icSHAPE_{{condition}}_PROBer.{suffix}", path = exp_path, suffix = ["beta", "gamma", "expr"])
+		expand("{path}/icSHAPE_{{condition}}_PROBer.{suffix}", path = exp_path, suffix = ["beta", "expr"])
 	threads: 20
 	shell:
 		"{PROBer} estimate -p {threads} --primer-length 0 --size-selection-min 20 --size-selection-max 120 --read-length 87 {input[0]} {params} --alignments {input[1]}"
@@ -408,7 +408,7 @@ rule generate_pseudoU_PR_ROC_plots:
 
 
 rule bowtie_align_to_genome:
-	input: 
+	input:
 		human_ref,
 		"{path}/SRR3147675_cleaned.fq".format(path = exp_path),
 		Bowtie, Samtools
@@ -419,3 +419,57 @@ rule bowtie_align_to_genome:
 	threads: 20
 	shell:
 		"{Bowtie} -a -m 100 --chunkmbs 1024 -p {threads} -S {input[0]} {input[1]} 2> {log} | {Samtools} view -S -b -o {output} -"
+
+rule run_PROBer_iCLIP:
+	input:
+		rules.bowtie_align_to_genome.output,
+		PROBer
+	params: 
+		"{path}/RBFOX2_iCLIP_res".format(path = exp_path)
+	output:
+		"{path}/RBFOX2_iCLIP_res.site_info".format(path = exp_path)
+	threads: 20
+	shell:
+		"{PROBer} iCLIP -p {threads} {params} --alignments {input[0]}"
+
+rule run_iCLIP_baseline:
+	input:
+		rules.bowtie_align_to_genome.output,
+		PROBer
+	params: 
+		"{path}/RBFOX2_iCLIP_naive".format(path = exp_path)
+	output:
+		"{path}/RBFOX2_iCLIP_naive.site_info".format(path = exp_path)
+	threads: 20
+	shell:
+		"{PROBer} iCLIP -p {threads} --naive {params} --alignments {input[0]}"
+
+rule detect_motif:
+	input:
+		"{path}/detectMotif".format(path = script_path),
+		"{path}/Homo_sapiens.GRCh38.dna.primary_assembly.fa".format(path = ref_human),
+		rules.run_PROBer_iCLIP.output
+	output:
+		"{path}/RBFOX2_iCLIP.10.motifs".format(path = exp_path)
+	shell:
+		"{input[0]} {input[1]} TGCATG 10 {input[2]} {output}"
+
+rule calculate_motif_rate:
+	input:
+		"{path}/calcMotifRate".format(path = script_path),
+		rules.detect_motif.output,
+		rules.run_PROBer_iCLIP.output,
+		rules.run_iCLIP_baseline.output
+	output:
+		"{path}/RBFOX2_iCLIP_table.txt".format(path = result_path)
+	shell:
+		"{input[0]} 10 10.0 {input[1]} {input[2]} {input[3]} > {output}"
+
+rule generate_BedGraph:
+	input:
+		rules.run_PROBer_iCLIP.output
+	output:
+		expand("{path}/{name}.bedGraph", path = result_path, name = ["SRGAP2B", "SRGAP2D"])
+	shell:
+		"{script_path}/generateBedGraph chr1 - 144887265 145095528 {input} {output[0]} && "
+		"{script_path}/generateBedGraph chr1 + 143975087 144068350 {input} {output[1]}"
