--- a/exp/Snakefile
+++ b/exp/Snakefile
@@ -410,7 +410,7 @@ rule generate_pseudoU_PR_ROC_plots:
 rule bowtie_align_to_genome:
 	input:
 		human_ref,
-		"{path}/SRR3147675_cleaned.fq".format(path = exp_path),
+		"{path}/SRR3147675_cleaned.fq".format(path = YeoLab),
 		Bowtie, Samtools
 	output:
 		"{path}/RBFOX2_iCLIP.bam".format(path = exp_path)
@@ -419,6 +419,15 @@ rule bowtie_align_to_genome:
 	threads: 20
 	shell:
 		"{Bowtie} -a -m 100 --chunkmbs 1024 -p {threads} -S {input[0]} {input[1]} 2> {log} | {Samtools} view -S -b -o {output} -"
+
+rule generate_iCLIP_mapping_statistics_table:
+	input:
+		rules.bowtie_align_to_genome.output
+	output:
+		"{path}/iCLIP_mapping_statistics.txt".format(path = result_path)
+	shell:
+		"echo -e 'Unique\tMulti-mapping\tUnalignable\tFiltered' > {output} && "
+		"{script_path}/collectAlignStat {input} None >> {output}"
 
 rule run_PROBer_iCLIP:
 	input:
@@ -463,7 +472,7 @@ rule calculate_motif_rate:
 	output:
 		"{path}/RBFOX2_iCLIP_table.txt".format(path = result_path)
 	shell:
-		"{input[0]} 10 10.0 {input[1]} {input[2]} {input[3]} > {output}"
+		"{input[0]} 10 10.0 {input[1]} {input[2]} {input[3]} {output}"
 
 rule generate_BedGraph:
 	input:
