Changed iCLIP example

--- a/exp/Snakefile
+++ b/exp/Snakefile
@@ -487,7 +487,15 @@ rule generate_BedGraph:
 	input:
 		rules.run_PROBer_iCLIP.output
 	output:
-		expand("{path}/{name}.bedGraph", path = result_path, name = ["SRGAP2B", "SRGAP2D"])
+		expand("{path}/{name}.bedGraph", path = result_path, name = "NUP133")
 	shell:
-		"{script_path}/generateBedGraph 1 - 145089359 145089504 {input} {output[0]} && "
-		"{script_path}/generateBedGraph 1 + 143978486 143978631 {input} {output[1]}"
+		"{script_path}/generateBedGraph 1 - 229470242 229470388 {input} {output[0]}"
+
+# rule generate_BedGraph:
+# 	input:
+# 		rules.run_PROBer_iCLIP.output
+# 	output:
+# 		expand("{path}/{name}.bedGraph", path = result_path, name = ["SRGAP2B", "SRGAP2D"])
+# 	shell:
+# 		"{script_path}/generateBedGraph 1 - 145089359 145089504 {input} {output[0]} && "
+# 		"{script_path}/generateBedGraph 1 + 143978486 143978631 {input} {output[1]}"
