--- a/extra/GrannemanLab/Snakefile
+++ b/extra/GrannemanLab/Snakefile
@@ -4,12 +4,22 @@ min_version("3.7.1")
 
 fastq_dump = "/home/bli/PROBer_paper_analysis/tools/sratoolkit.2.6.3-ubuntu64/bin/fastq-dump"
 cutadapt = "/home/bli/PROBer_paper_analysis/tools/cutadapt-1.10/bin/cutadapt"
+samtools = "/home/bli/PROBer_paper_analysis/tools/samtools-1.3.1/samtools"
 PROBer = "/home/bli/software/PROBer/build/src/PROBer"
 
-include: "data/Snakefile"
+data_path = "data"
+exp_path = "exp"
+script_path = "/home/bli/PROBer_paper_analysis/scripts"
+
+include: "{path}/Snakefile".format(path = data_path)
+include: "{path}/Snakefile".format(path = exp_path)
 
 rule all:
 	input:
-		expand("data/{run}_{mate}.fastq", run = ["SRR1041315", "SRR1041316", "SRR1041322", "SRR1041323"], mate = ["1", "2"]),
-		expand("data/{run}_{mate}.fastq", run = ["SRR1041324", "SRR1041325", "SRR1041326", "SRR1041327", "SRR1041328", "SRR1041329"], mate = ["1", "2"])
+		expand("{path}/ChemModSeq_{channel}.bias", path = exp_path, channel = ["minus", "plus"]),
+		expand("{path}/ChemModSeq_PROBer.beta", path = exp_path),
+		expand("{path}/ChemModSeq_{method}.scores", path = exp_path, method = ["StructureFold", "Modseq", "icSHAPE"]) 
+		# expand("{path}/{condition}_averages_{rep}_cleaned_{mate}.fastq", path = data_path, condition = ["DMS", "Control"], rep = ["1", "2", "3"], mate = ["1", "2"])
+		# expand("data/{run}_{mate}.fastq", run = ["SRR1041315", "SRR1041316", "SRR1041322", "SRR1041323"], mate = ["1", "2"]),
+		# expand("data/{run}_{mate}.fastq", run = ["SRR1041324", "SRR1041325", "SRR1041326", "SRR1041327", "SRR1041328", "SRR1041329"], mate = ["1", "2"])
 		
