--- a/ground_truth/Snakefile
+++ b/ground_truth/Snakefile
@@ -56,25 +56,44 @@ rule generate_mouse_rRNAs_fa:
 	shell:
 		"cat {input} > {output}"
 
+# rule unzip_SHAPE_data:
+# 	input: 
+# 		expand("{path}/SHAPE_data.zip", path = gt_path)
+# 	output: 
+# 		expand("{path}/{name}.adducts", path = gt_path, name = spike_ins),
+# 		expand("{path}/{file}", path = gt_path, file = ["SHAPE.t2g", "spikes_info.txt"])
+# 	shell:
+# 		"unzip {input} -d {gt_path} && touch {output}"
 
-rule unzip_SHAPE_data:
-	input: 
-		expand("{path}/SHAPE_data.zip", path = gt_path)
-	output: 
-		expand("{path}/{name}.adducts", path = gt_path, name = spike_ins),
-		expand("{path}/{file}", path = gt_path, file = ["SHAPE.t2g", "spikes_info.txt"])
+# rule process_SHAPE_data:
+# 	input:
+# 		expand("{path}/{{shape_name}}.adducts", path = gt_path)
+# 	params:
+# 		output_name = "{path}/{{shape_name}}".format(path = gt_path)
+# 	output:
+# 		expand("{path}/{{shape_name}}.{suffix}", path = gt_path, suffix = ["fa", "gamma", "beta"])
+# 	shell:
+# 		"{script_path}/processSHAPEdata {input} {params.output_name}"
+
+rule unzip_SHAPE_MaP:
+	input:
+		expand("{path}/SHAPE-MaP.zip", path = gt_path)
+	output:
+		expand("{path}/{name}.1m7.map", path = gt_path, name = ["5S", "16S", "23S", "Group_I", "Group_II", "HCV_IRES", "TPP", "tRNAphe", "HIV-1"])
 	shell:
 		"unzip {input} -d {gt_path} && touch {output}"
 
-rule process_SHAPE_data:
+rule process_SHAPE_MaP:
 	input:
-		expand("{path}/{{shape_name}}.adducts", path = gt_path)
+		expand("{path}/{{seqname}}.1m7.map", path = gt_path),
+		expand("{path}/structure_seq_PROBer.{suffix}", path = exp_path, suffix = ["beta", "gamma"])
 	params:
-		output_name = "{path}/{{shape_name}}".format(path = gt_path)
+		output_name = "{path}/{{seqname}}".format(path = gt_path),
+		seed = "0"
 	output:
-		expand("{path}/{{shape_name}}.{suffix}", path = gt_path, suffix = ["fa", "gamma", "beta"])
+		expand("{path}/{{seqname}}.{suffix}", path = gt_path, suffix = ["fa", "gamma", "beta"])
 	shell:
-		"{script_path}/processSHAPEdata {input} {params.output_name}"
+		"{script_path}/processSHAPEMaP {input} {params.seed} {params.output_name}"
 
 rule generate_pseudoU_ground_truth:
 	output:
